generate entry and user-portal module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,14 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "app/*": [
+        "./app/*",
+        "./src/app/*",
+        "../src/app/*",
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
