--- a/package.json
+++ b/package.json
@@ -34,12 +34,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
+    "@angular-eslint/eslint-plugin": "^4.0.0",
+    "@angular-eslint/eslint-plugin-template": "^4.0.0",
     "@angular/cli": "~11.2.3",
     "@angular/compiler-cli": "~11.2.4",
     "@ngrx/schematics": "^11.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.25.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
