--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "eslint": "eslint --fix './src/**/*.ts'"
+    "eslint-": "eslint --fix './src/**/*.ts'"
   },
   "private": true,
   "dependencies": {
@@ -28,12 +28,14 @@
     "@ngrx/entity": "^11.1.0",
     "@ngrx/store": "^11.1.0",
     "@ngrx/store-devtools": "^11.1.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.22.0",
     "angular-notifier": "^9.0.1",
     "bootstrap": "^4.5.0",
     "eslint-plugin-jsdoc": "^32.3.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "tslint": "^6.1.3",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
